Implemented projects section with sample porjects

--- a/public/resume.htm
+++ b/public/resume.htm
@@ -38,6 +38,24 @@
         </section>
 
         <section>
+            <h2>PROJECTS</h2>
+            <p><strong>Online Portfolio Website</strong></p>
+            <ul>
+                <li>Developed a personal portfolio website using HTML, CSS, and JavaScript to showcase my projects and skills.
+                </li>
+                <li>Implemented responsive design techniques to ensure the website is accessible on various devices.</li>
+                <li>Utilized Git for version control and deployed the website using Heroku.</li>
+            </ul>
+        
+            <p><strong>Machine Learning Model for Predicting Housing Prices</strong></p>
+            <ul>
+                <li>Built a machine learning model using Python and PyTorch to predict housing prices based on various
+                    features.</li>
+                <li>Visualized the results using Matplotlib and presented the findings in an interactive website using SvelteKit.</li>
+            </ul>
+        </section>
+
+        <section>
             <h2>VOLUNTEER EXPERIENCE</h2>
             <p><strong>Odawa Native Friendship Center</strong>, Ottawa, ON</p>
             <p><em>Communications Specialist</em></p>
