Added Tic-Tac-Toe game to project section.

--- a/public/resume.html
+++ b/public/resume.html
@@ -66,6 +66,14 @@
                     features.</li>
                 <li>Visualized the results using Matplotlib and presented the findings in an interactive website using SvelteKit.</li>
             </ul>
+
+            <p><strong>Tic-Tac-Toe Game</strong></p>
+            <ul>
+                <li>Developed a Tic-Tac-Toe game using HTML, CSS, and JavaScript, providing an interactive and engaging user experience.</li>
+                <li>Implemented game logic to handle player turns, detect wins, and identify draw situations.</li>
+                <li>Utilized Git for version control and deployed the game using GitHub Pages.</li>
+            </ul>
+
         </section>
 
         <section id="volunteer-experience">
