Added hyperlink to the tictactoe game in the project section

--- a/public/resume.html
+++ b/public/resume.html
@@ -62,8 +62,7 @@
         
             <p><strong>Machine Learning Model for Predicting Housing Prices</strong></p>
             <ul>
-                <li>Built a machine learning model using Python and PyTorch to predict housing prices based on various
-                    features.</li>
+                <li>Built a machine learning model using Python and PyTorch to predict housing prices based on various features.</li>
                 <li>Visualized the results using Matplotlib and presented the findings in an interactive website using SvelteKit.</li>
             </ul>
 
@@ -71,7 +70,7 @@
             <ul>
                 <li>Developed a Tic-Tac-Toe game using HTML, CSS, and JavaScript, providing an interactive and engaging user experience.</li>
                 <li>Implemented game logic to handle player turns, detect wins, and identify draw situations.</li>
-                <li>Utilized Git for version control and deployed the game using GitHub Pages.</li>
+                <li>Utilized Git for version control and deployed the game using GitHub Pages. <a href="tictactoe_index.html">Play the game</a></li>
             </ul>
 
         </section>
