Added hospital emergency system under projects

--- a/public/resume.html
+++ b/public/resume.html
@@ -19,12 +19,10 @@
     </div>
     <div class="container">
 
-        <!-- <h1>Nimisha Ayappa</h1> -->
         <div class="contact-info" href="#contact">
             <p><span>Location:</span> Ottawa, Canada</p>
         </div>
         
-
         <section id="education">
             <h2>EDUCATION</h2>
             <p><strong>University of Ottawa</strong>, Ottawa, ON</p>
@@ -73,6 +71,13 @@
                 <li>Utilized Git for version control and deployed the game using GitHub Pages. <a href="tictactoe_index.html">Play the game</a></li>
             </ul>
 
+            <p><strong>Hospital Emergency System</strong></p>
+            <ul>
+                <li>Developed a hospital emergency waitlist system to manage patient check-ins and track wait times.</li>
+                <li>Designed the user interface using HTML, CSS, and JavaScript, ensuring a user-friendly experience.</li>
+                <li>Implemented responsive design to support various devices and screen sizes.</li>
+                <li>Utilized Git for version control and managed the project on GitHub. <a href="https://github.com/KavinTheG/emergency_waitlist.git">View on GitHub</a></li>
+            </ul>
         </section>
 
         <section id="volunteer-experience">
